force-app/main/default/objects/numm__FA_Depreciation__c/numm__FA_Depreciation__c.object-meta.xml
<CustomObject>
    <description>Objet des plans d&#39;amortissements</description>
    <label>Plan d&#39;amortissement</label>
    <nameField>
        <displayFormat>FAAmo-{000000}</displayFormat>
        <label>Nom de FA Amortissement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plans d&#39;amortissements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>