force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__AccountingDate__c.field-meta.xml
<CustomField>
    <fullName>numm__AccountingDate__c</fullName>
    <label>DateCompta</label>
    <type>Date</type>
</CustomField>