force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__AmountRV1__c.field-meta.xml
<CustomField>
    <fullName>numm__AmountRV1__c</fullName>
    <label>Montant VR comptable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>