force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__AmountRV2__c.field-meta.xml
<CustomField>
    <fullName>numm__AmountRV2__c</fullName>
    <label>Montant VR fiscale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>