force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__Depreciation01__c.field-meta.xml
<CustomField>
    <fullName>numm__Depreciation01__c</fullName>
    <label>Annuités comptables</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>