force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__Depreciation03__c.field-meta.xml
<CustomField>
    <fullName>numm__Depreciation03__c</fullName>
    <label>Annuités IFRS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>