force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__EndBookValue02__c.field-meta.xml
<CustomField>
    <fullName>numm__EndBookValue02__c</fullName>
    <label>VNC Fin fiscale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>