force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__EndDate1__c.field-meta.xml
<CustomField>
    <fullName>numm__EndDate1__c</fullName>
    <label>Date fin comptable</label>
    <type>Date</type>
</CustomField>