force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__EndDate2__c.field-meta.xml
<CustomField>
    <fullName>numm__EndDate2__c</fullName>
    <label>Date fin fiscale</label>
    <type>Date</type>
</CustomField>