force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__EndDate3__c.field-meta.xml
<CustomField>
    <fullName>numm__EndDate3__c</fullName>
    <label>Date fin IFRS</label>
    <type>Date</type>
</CustomField>