force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__ExcepStartBookValue01__c.field-meta.xml
<CustomField>
    <fullName>numm__ExcepStartBookValue01__c</fullName>
    <label>Déro VNC Début</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>