force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__Exceptional__c.field-meta.xml
<CustomField>
    <fullName>numm__Exceptional__c</fullName>
    <label>Déro. annuités</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>