force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__StartAmountRV3__c.field-meta.xml
<CustomField>
    <fullName>numm__StartAmountRV3__c</fullName>
    <label>VR Début période IFRS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>