force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__StartBookValue01__c.field-meta.xml
<CustomField>
    <fullName>numm__StartBookValue01__c</fullName>
    <label>VNC Début comptable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>