force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__StartDate1__c.field-meta.xml
<CustomField>
    <fullName>numm__StartDate1__c</fullName>
    <label>Date début comptable</label>
    <type>Date</type>
</CustomField>