force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__StartDate2__c.field-meta.xml
<CustomField>
    <fullName>numm__StartDate2__c</fullName>
    <label>Date début fiscal</label>
    <type>Date</type>
</CustomField>