force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__StartDate3__c.field-meta.xml
<CustomField>
    <fullName>numm__StartDate3__c</fullName>
    <label>Date début IFRS</label>
    <type>Date</type>
</CustomField>