force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__StartDatePeriode__c.field-meta.xml
<CustomField>
    <fullName>numm__StartDatePeriode__c</fullName>
    <description>date de début de période</description>
    <label>Date de début période</label>
    <type>Date</type>
</CustomField>