force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__TECHAmountRV1__c.field-meta.xml
<CustomField>
    <fullName>numm__TECHAmountRV1__c</fullName>
    <description>Indication de la VR à la FIN de la période (non modif manuellement)</description>
    <label>TECH VR1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>