force-app/main/default/objects/numm__FA_Depreciation__c/fields/numm__TECHDepOnMonth__c.field-meta.xml
<CustomField>
    <fullName>numm__TECHDepOnMonth__c</fullName>
    <formula>IF( TODAY()&gt;numm__StartDate1__c  &amp;&amp; TODAY()&lt; numm__EndDatePeriode__c ,( (numm__StartDate1__c  -IF(TODAY()&gt;numm__EndDate1__c,numm__EndDate1__c, TODAY()))/(numm__StartDate1__c -numm__EndDate1__c))* numm__Depreciation01__c  , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECHDepOnMonth</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>